# domos-pmea

./: .gitignore  Makefile  PLAN.md  README.md  compose.yml  config.example.env  config.example.yml  pyproject.toml  test.py
data/: properties_db.json
docs/: PLAN.md  REQUIREMENTS.md  SETUP_GUIDE.md
src/pmea/: app.py  config.py  main.py
src/pmea/agent/: __init__.py  consumer.py  prompts.py  utils.py
src/pmea/agent/tools/: __init__.py  create_ticket.py  forward_to_stakeholder.py  properties.py  reply_to_customer.py  reply_to_user.py  tools.py  types.py
src/pmea/app/: __init__.py  chat.py  server.py  utils.py
src/pmea/config/: __init__.py  config.py  llm.py
src/pmea/handler/: __init__.py  consumer.py
src/pmea/mailer/: __init__.py  file_writer.py  listener.py  mail_listener.py  sender.py  thread_listener.py  types.py  utils.py
src/pmea/models/: __init__.py  properties.py  ticket.py
src/pmea/repository/: properties.py  threads.py  tickets.py
tests/agent/: test_debug_consumer.py
tests/repository/: test_properties.py
