[project]
name = "domos-pmea"
version = "0.1.0"
description = "DOMOS Property Manager Email Assistant Test Assignment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
]

[project.scripts]
domos-pmea = "pmea.main:main"
