[project]
name = "domos-pmea"
version = "0.1.0"
description = "DOMOS Property Manager Email Assistant Test Assignment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioimaplib>=2.0.1",
    "aiosmtplib>=4.0.1",
    "asyncio>=3.4.3",
    "langchain>=0.3.25",
    "langchain-core>=0.3.61",
    "langchain-google-genai>=2.1.4",
    "langchain-ollama>=0.3.3",
    "langchain-redis>=0.1.2",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pylint>=3.3.7",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pyyaml>=6.0.2",
    "redis==5.3.0",
    "uv>=0.7.8",
]

[project.scripts]
domos-pmea = "pmea.main:main"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
